-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.11.0
-
None
-
-
2d2e7bd6f (dev)
Note that this did not happen on 5.10. (Oh wait you couldn't drag pass the boundaries in 5.10 anyways...)
To reproduce, try scrolling up the webivew using trackpad a couple of times pass the top of the page.
I uploaded a screen recording of the problem.
- is duplicated by
-
QTBUG-72686 Elastic scroll is very slow
-
- Closed
-
| For Gerrit Dashboard: QTBUG-67716 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 476530,8 | Improve rubber-banding in QT WebEngine Pages | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |